--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3989bf5
-	base = 8b10def
+	base = 8a904f9
 	trim = diagnostic_aggregator
-	trimbase = 
+	trimbase = 8b10def
