--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3989bf5
-	base = a5e487c
+	base = a7a72ed
 	trim = diagnostic_common_diagnostics
-	trimbase = 
+	trimbase = a5e487c
