--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3989bf5
-	base = db5ade6
+	base = ac3d389
 	trim = diagnostic_updater
-	trimbase = 
+	trimbase = db5ade6
