--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3989bf5
-	base = 66d9941
+	base = 39fd7d1
 	trim = diagnostics
-	trimbase = 
+	trimbase = 66d9941
