--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3989bf5
-	base = e9b74d9
+	base = eb299cb
 	trim = self_test
-	trimbase = 
+	trimbase = e9b74d9
