--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/diagnostics
-	previous = 
-	base = d4703b9
+	previous = d4703b9
+	base = 48a3812
 	trim = 
 	trimbase = 
