--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/diagnostic_aggregator
-	previous = 
-	base = 476aa37
+	previous = 476aa37
+	base = b7bb9c0
 	trim = 
 	trimbase = 
