--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/diagnostic_updater
-	previous = 
-	base = 8d74332
+	previous = 8d74332
+	base = 19e7b25
 	trim = 
 	trimbase = 
