--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/self_test
-	previous = 
-	base = 4971191
+	previous = 4971191
+	base = 043b014
 	trim = 
 	trimbase = 
