--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/diagnostic_common_diagnostics
-	previous = 
-	base = 42e26f2
+	previous = 42e26f2
+	base = 3a31743
 	trim = 
 	trimbase = 
