--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - ros2
+      - ros2-humble
   schedule:
     # Run every week at 20:00 on Sunday
     - cron: "0 20 * * 0"
@@ -22,7 +22,10 @@ jobs:
             uncrustify,
             xmllint,
           ]
-    runs-on: ubuntu-22.04
+        include:
+          - distro: humble
+            os: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
     env:
       AMENT_CPPCHECK_ALLOW_SLOW_VERSIONS: 1
     steps:
@@ -30,7 +33,6 @@ jobs:
       - uses: ros-tooling/setup-ros@master
         with:
           required-ros-distributions: ${{ matrix.distro }}
-      - run: sudo pip install pydocstyle==6.1.1 # downgrade to fix https://github.com/ament/ament_lint/pull/428
       - uses: ros-tooling/action-ros-lint@master
         with:
           linter: ${{ matrix.linter }}
