--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 949024f
-	base = b934b94
+	base = 2905909
 	trim = diagnostic_aggregator
-	trimbase = 
+	trimbase = b934b94
