--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 949024f
-	base = 01c84e6
+	base = 32c2b74
 	trim = diagnostic_common_diagnostics
-	trimbase = 
+	trimbase = 01c84e6
