--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 949024f
-	base = 1a0795b
+	base = d4d7ce4
 	trim = diagnostic_updater
-	trimbase = 
+	trimbase = 1a0795b
