--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 949024f
-	base = f58d791
+	base = 97ca6e3
 	trim = diagnostics
-	trimbase = 
+	trimbase = f58d791
