--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 949024f
-	base = 7359b7a
+	base = c2f94c8
 	trim = self_test
-	trimbase = 
+	trimbase = 7359b7a
