--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdb3559
-	base = ae3ed62
+	base = 89896d1
 	trim = diagnostic_aggregator
-	trimbase = 
+	trimbase = ae3ed62
