--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdb3559
-	base = 67150f7
+	base = b186b0c
 	trim = diagnostic_common_diagnostics
-	trimbase = 
+	trimbase = 67150f7
