--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdb3559
-	base = de55281
+	base = 8e40742
 	trim = diagnostic_updater
-	trimbase = 
+	trimbase = de55281
