--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdb3559
-	base = 80518a3
+	base = bb2c32a
 	trim = diagnostics
-	trimbase = 
+	trimbase = 80518a3
