--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdb3559
-	base = 4de1d46
+	base = e13265f
 	trim = self_test
-	trimbase = 
+	trimbase = 4de1d46
