--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c202e19
-	base = c824af4
+	base = 146888d
 	trim = diagnostic_aggregator
-	trimbase = 
+	trimbase = c824af4
