--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c202e19
-	base = 902759c
+	base = ab72ed5
 	trim = diagnostic_common_diagnostics
-	trimbase = 
+	trimbase = 902759c
