--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c202e19
-	base = 00524ec
+	base = 60189da
 	trim = diagnostic_updater
-	trimbase = 
+	trimbase = 00524ec
