--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c202e19
-	base = e788fa2
+	base = f7630a2
 	trim = diagnostics
-	trimbase = 
+	trimbase = e788fa2
