--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c202e19
-	base = f3ea4fa
+	base = f5be9e9
 	trim = self_test
-	trimbase = 
+	trimbase = f3ea4fa
