--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 104b0a8
-	base = afb9d7d
+	base = c2d715c
 	trim = diagnostic_updater
-	trimbase = 
+	trimbase = afb9d7d
