--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 104b0a8
-	base = 5d6d508
+	base = 3725891
 	trim = self_test
-	trimbase = 
+	trimbase = 5d6d508
