--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 104b0a8
-	base = a665cc5
+	base = 647faeb
 	trim = diagnostic_common_diagnostics
-	trimbase = 
+	trimbase = a665cc5
