--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 104b0a8
-	base = 75dcd8a
+	base = 5f5a624
 	trim = diagnostic_aggregator
-	trimbase = 
+	trimbase = 75dcd8a
