--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 104b0a8
-	base = 9febbfd
+	base = 2c1cbbe
 	trim = diagnostics
-	trimbase = 
+	trimbase = 9febbfd
